--- a/client/angular.json
+++ b/client/angular.json
@@ -32,7 +32,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": ["node_modules/dotenv/config.js"]
           },
           "configurations": {
             "production": {
